--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -4,6 +4,8 @@
   background-color: white;
   position: sticky;
   top: 0;
+  display: flex;
+  align-items: center;
   z-index: 999;
   font-family: "Josefin Sans", sans-serif;
 }
