--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -47,6 +47,10 @@
   border-radius: 10px;
   text-align: center;
 }
+.loginButton:disabled {
+  cursor: not-allowed;
+  background-color: rgb(56, 49, 47);
+}
 
 .loginRegisterButton {
   position: absolute;
